# coursework

./: .gitignore  CMakeLists.txt  PsychologicalTests_ClassDiagram.puml  README.md  run.sh
Stat/: statistics_test1.txt  statistics_test3.txt
TestAnswerTxt/: result_test3_Апанас_2025-11-14_09-27-41.txt  result_test3_Олег_2025-11-13_09-05-43.txt
TestQuestionTxt/: test_1.txt  test_3.txt
hdr/core/: Answer.h  DataManager.h  Question.h  Statistics.h  Test.h  TestResult.h
hdr/ui/: AddTestWindow.h  MainWindow.h  ResultsWindow.h  StatisticsWindow.h  TestWindow.h
hdr/utils/: ColorPalette.h  FileManager.h  TemplateUtils.h
src/: main.cpp
src/core/: Answer.cpp  DataManager.cpp  Question.cpp  Statistics.cpp  Test.cpp  TestResult.cpp
src/ui/: AddTestWindow.cpp  MainWindow.cpp  ResultsWindow.cpp  StatisticsWindow.cpp  TestWindow.cpp
src/utils/: ColorPalette.cpp  FileManager.cpp
